Change accent color from yellow to blue

--- a/data/config.json
+++ b/data/config.json
@@ -1,7 +1,7 @@
 {
     "title": "JULZ",
     "color_scheme": "light",
-    "accent_color": "yellow",
+    "accent_color": "blue",
     "base_font": "fraunces",
     "header": {
         "title": "JULZ",
