--- a/data/config.json
+++ b/data/config.json
@@ -31,7 +31,7 @@
                 "style": "link"
             },
             {
-                "label": "Insights",
+                "label": "The Insights",
                 "url": "/blog/",
                 "style": "link"
             },
